c2prj1_cards/grade.txt
Grading at Fri Aug 17 12:11:41 UTC 2018
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
